# pinocchio-tapedrive

./: README.md
client/: README.md  bun.lockb  generate-client.ts  package.json
client/idl/: solana_pinocchio_starter.json
program/: Cargo.toml
program/benches/: compute_units.rs
program/src/: entrypoint.rs  lib.rs
program/src/api/: Cargo.toml  account.rs  consts.rs  error.rs  event.rs  lib.rs  loaders.rs  macros.rs  mod.rs  pda.rs  rent.rs  types.rs  utils.rs
program/src/api/instruction/: miner.rs  mod.rs  program.rs  spool.rs  tape.rs
program/src/api/metadata/: collection.rs  collection_details.rs  create_metadata_account_v3.rs  creator.rs  data_v2.rs  mod.rs  use_method.rs  uses.rs
program/src/api/state/: archive.rs  block.rs  epoch.rs  miner.rs  mod.rs  spool.rs  tape.rs  treasury.rs  writer.rs
program/src/instruction/: mod.rs
program/src/instruction/init/: airdrop.rs  initialize.rs  mod.rs
program/src/instruction/mine/: miner_claim.rs  miner_mine.rs  miner_register.rs  miner_unregister.rs  mod.rs
program/src/instruction/spool/: mod.rs  spool_commit.rs  spool_create.rs  spool_destroy.rs  spool_pack.rs  spool_unpack.rs
program/src/instruction/tape/: mod.rs  tape_create.rs  tape_finalize.rs  tape_set_header.rs  tape_subsidize.rs  tape_update.rs  tape_write.rs
program/src/state/: constant.rs  mod.rs
program/tests/: unit_tests.rs
