[package]
name = "solana-pinocchio-starter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-log = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-pubkey = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-system = { git = "https://github.com/anza-xyz/pinocchio.git" }
pinocchio-token = "0.4.0"
pinocchio-associated-token-account = "0.2.0"
num_enum = "0.7.2"
const-crypto = "0.3.0"
shank = "0.4.2"
bytemuck = { version = "1.23.0", features = ["derive"] }
brine-tree = "0.6.2"
crankx = "0.2.2"
packx = "0.2.5"
blake3 = "1.8.2"

[dev-dependencies]
solana-sdk = "2.2.1"
mollusk-svm = "0.4.0"
mollusk-svm-bencher = "0.4.0"


[features]
no-entrypoint = []
std = []
test-default = ["no-entrypoint", "std"]
bench-default = ["no-entrypoint", "std"]

[[bench]]
name = "compute_units"
harness = false


[[test]]
name = "unit_tests"
